没有bug的版本，如果后期出bug，到这里恢复

--- a/source/_posts/测试文章2.md
+++ b/source/_posts/测试文章2.md
@@ -1,7 +1,9 @@
 ---
 title: 测试文章2
 date: 2020-04-21 17:14:57
-tags: 随笔
+tags: [随笔, 测试文章]
+toc: true
+reward: true
 ---
 
 # 测试一下文章
@@ -17,3 +19,15 @@ tags: 随笔
 ![abab](https://cdn.jsdelivr.net/gh/ysl970629/public_picture_bed_01@latest//img/20200421172021.png)
 
 ![d](https://cdn.jsdelivr.net/gh/ysl970629/public_picture_bed_01@latest//img/00头像.jpg)
+
+测试数学公式：
+
+$$
+\operatorname{UCT}\left(v_{i}, v\right)=\frac{Q\left(v_{i}\right)}{N\left(v_{i}\right)}+c \sqrt{\frac{\log (N(v))}{N\left(v_{i}\right)}}
+$$
+
+测试链接：
+
+[百度](http://www.baidu.com) 
+
+[站内文章链接](http://ysl970629.github.io/2020/04/21/测试文章题目/) 
