换了主题与语言，目前没发现问题，可备份

--- a/source/_posts/测试文章2.md
+++ b/source/_posts/测试文章2.md
@@ -2,11 +2,7 @@
 title: 测试文章2
 date: 2020-04-21 17:14:57
 tags: [随笔, 测试文章]
-toc: true
-reward: true
 ---
-
-# 测试一下文章
 
 这个测试是为了测试在本地删除master分支的基础上，还能否正常推送
 
@@ -15,6 +11,8 @@ reward: true
 然后sources用于保存源代码到github上
 
 顺便测试一下图片能否正常显示：
+
+<!--more-->
 
 ![abab](https://cdn.jsdelivr.net/gh/ysl970629/public_picture_bed_01@latest//img/20200421172021.png)
 
@@ -30,4 +28,5 @@ $$
 
 [百度](http://www.baidu.com) 
 
-[站内文章链接](http://ysl970629.github.io/2020/04/21/测试文章题目/) 
+{% post_link 测试文章题目 %}
+
