增加了永久链接

--- a/source/_posts/今天是博客的第二天.md
+++ b/source/_posts/今天是博客的第二天.md
@@ -1,8 +1,12 @@
 ---
 title: 今天是博客的第二天
+tags:
+  - 随笔
+  - 19970629
+categories:
+  - java
+abbrlink: 9aa223c3
 date: 2020-04-22 17:54:39
-tags: [随笔,1997_06_29]
-categories: [java]
 ---
 
 上午遇到了各种各样的bug，就是测试不出来是怎么回事，最终的结论是不要折腾了。
